--- a/views/default/mypage.html
+++ b/views/default/mypage.html
@@ -1,5 +1,33 @@
 {{extend 'layout.html'}}
 
 {{block header}}
-<p> This is my user page</p>
 {{end}}
+<script src="{{=URL('static', 'js/vue.js')}}"></script>
+
+<p> This is my user page</p>
+<div id="vue-div">
+    <div class="container form_row">
+        <div class="label quarter">
+        Title:
+        </div>
+        <div class="form threequarters">
+        <input v-model="form_title" placeholder="Enter the post title"/>
+        </div>
+    </div>
+    <div class="container form_row">
+        <div class="label quarter">
+        Content:
+        </div>
+        <div class="form threequarters">
+        <textarea v-model="form_description" placeholder="Enter the content of your post"></textarea>
+        </div>
+    </div>
+    <div class="container form_row"><div class="quarter"></div>
+        <div class="threequarters">
+        <div class="submit">
+            <button id="add-post" v-on:click="add_post">Submit</button>
+        </div>
+        </div>
+    </div>
+  </div>
+
