--- a/views/default/mypage.html
+++ b/views/default/mypage.html
@@ -1,32 +1,36 @@
 {{extend 'layout.html'}}
 
-{{block header}}
-{{end}}
+{{block head}}
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
+<script>
+var add_post_url = "{{=URL('api', 'add_post', user_signature=True)}}";
+</script>
+{{end}}
+
 
 <p> This is my user page</p>
 <div id="vue-div">
     <div class="container form_row">
         <div class="label quarter">
-        Title:
+            Title:
         </div>
         <div class="form threequarters">
-        <input v-model="form_title" placeholder="Enter the post title"/>
+            <input v-model="form_title" placeholder="Enter the post title"/>
         </div>
     </div>
     <div class="container form_row">
         <div class="label quarter">
-        Content:
+            Content:
         </div>
         <div class="form threequarters">
-        <textarea v-model="form_description" placeholder="Enter the content of your post"></textarea>
+            <textarea v-model="form_description" placeholder="Enter the description of your post"></textarea>
         </div>
     </div>
     <div class="container form_row"><div class="quarter"></div>
         <div class="threequarters">
-        <div class="submit">
-            <button id="add-post" v-on:click="add_post">Submit</button>
-        </div>
+            <div class="submit">
+                <button id="add-post" v-on:click="console.log('clicked')'">Submit</button>
+            </div>
         </div>
     </div>
   </div>
