added divs to separate the 3 windows and removed excess code from index.html

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -3,67 +3,74 @@
 {{block head}}
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 <script>
+    //Post URLS
     var add_post_url = "{{=URL('api', 'add_post', user_signature=True)}}";
     var get_post_list_url = "{{=URL('api', 'get_post_list')}}";
-    // Like callbacks.
-    var set_like_url = "{{=URL('api', 'set_like', user_signature=True)}}";
-    var get_likers_url = "{{=URL('api', 'get_likers')}}"
-    // Stars.
-    var set_stars_url = "{{=URL('api', 'set_stars', user_signature=True)}}";
+
     var is_logged_in = {{='false' if auth.user is None else 'true'}};
 </script>
 {{end}}
 
 <div class="main_content">
-
     <div id="vue-div" class="display:none">
-      <!-- Your code goes here.  Remember to call $("#vue-div").show() once you get the data for the first time. -->
 
-      <!-- First, let's add a form to insert blog posts. -->
-      <div id="add_post" style="display:none">
-        <div class="container form_row">
-          <div class="label quarter">
-            Title:
-          </div>
-          <div class="form threequarters">
-            <input v-model="form_title" placeholder="Enter the post title"/>
-          </div>
-        </div>
-        <div class="container form_row">
-          <div class="label quarter">
-            Content:
-          </div>
-          <div class="form threequarters">
-            <textarea v-model="form_content" placeholder="Enter the content of your post"></textarea>
-          </div>
-        </div>
-        <div class="container form_row"><div class="quarter"></div>
-          <div class="threequarters">
-            <div class="submit">
-              <button id="add-post" v-on:click="add_post">Submit</button>
+      <!--This is the Main Page HTML code 
+        ####################################################################-->
+      <div class="main_page" style="background-color: red">
+        <p>This is the main page</p>
+        <!-- Message in case there are no posts. -->
+        <div v-if="post_list.length === 0">There are no posts.</div>
+
+        <!-- We display the posts. -->
+        <div id="post_list">
+          <div class="post_div" v-for="post in post_list">
+            <div class="post_title">${post.post_title}</div>
+            <div class="post_content">${post.post_content}</div>
+            <div class="attributes">
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Message in case there are no posts. -->
-      <div v-if="post_list.length === 0">There are no posts.</div>
-
-      <!-- We display the posts. -->
-      <div id="post_list">
-        <div class="post_div" v-for="post in post_list">
-          <div class="post_title">${post.post_title}</div>
-          <div class="post_content">${post.post_content}</div>
-          <div class="attributes">
-            
-            <!-- Code for Thumbs. -->
-
+      <!--- This is the user's page 
+        ####################################################################-->
+      <div class="user_page" style="background-color: green">
+        <p>This is the user page</p>
+        <div id="add_post" style="display:none">
+          <div class="container form_row">
+            <div class="label quarter">
+              Title:
+            </div>
+            <div class="form threequarters">
+              <input v-model="form_title" placeholder="Enter the post title"/>
+            </div>
+          </div>
+          <div class="container form_row">
+            <div class="label quarter">
+              Content:
+            </div>
+            <div class="form threequarters">
+              <textarea v-model="form_content" placeholder="Enter the content of your post"></textarea>
+            </div>
+          </div>
+          <div class="container form_row"><div class="quarter"></div>
+            <div class="threequarters">
+              <div class="submit">
+                <button id="add-post" v-on:click="add_post">Submit</button>
+              </div>
+            </div>
           </div>
         </div>
+
+        <div class="redirect_page" style="background-color:gold">
+          <p>This is the redirect page</p>
+          
+
+
+        </div>
       </div>
-
+      
     </div>
-
 </div>
 
 <script src="{{=URL('static', 'js/default_index.js')}}"></script>
