adding image to db in progress

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -73,6 +73,15 @@
               <input v-model="form_city" placeholder="Enter the city"/>
             </div>
           </div>
+
+          <div class="container form_row">
+            <div class="label quarter">
+              Image:
+            </div>
+            <div class="form threequarters">
+              <input type="file" v-model="form_image" placeholder="Pick an image"/>
+            </div>
+          </div>
           
           <div class="container form_row"><div class="quarter"></div>
             <div class="threequarters">
